--- a/src/components/Waterfall/style/index.module.css
+++ b/src/components/Waterfall/style/index.module.css
@@ -1,31 +1,15 @@
-/* stylelint-disable selector-class-pattern */
-.storybook-button {
-  display: inline-block;
-  font-weight: 700;
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  line-height: 1;
-  border: 0;
-  border-radius: 3em;
-  cursor: pointer;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.storybook-button--primary {
-  color: white;
-  background-color: #1ea7fd;
-}
-.storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 1px inset;
-}
-.storybook-button--small {
-  padding: 10px 16px;
-  font-size: 12px;
-}
-.storybook-button--medium {
-  padding: 11px 20px;
-  font-size: 14px;
-}
-.storybook-button--large {
-  padding: 12px 24px;
-  font-size: 16px;
+.container .item {
+  display: block;
+  width: 100px;
+  object-fit: contain;
+  overflow: hidden;
+  aspect-ratio: 1 / 1;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin: 10px;
 }
