--- a/src/components/VirtualList/style/index.module.less
+++ b/src/components/VirtualList/style/index.module.less
@@ -5,7 +5,19 @@
 	overflow: auto;
 	border: 1px solid tan;
 
-	.customContainer {
+	.contentContainer {
+		display: block;
+	}
+}
+
+.uncertainHeightContainer {
+	display: block;
+	width: 400px;
+	height: 600px;
+	overflow: auto;
+	border: 1px solid tan;
+
+	.contentContainer {
 		display: block;
 	}
 }
